Adding bio button

--- a/Bio.html
+++ b/Bio.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <a href="index.html" class="back-button">Back</a>
         <section class = "Bio">
             <div class = "main">
                 <img src ="https://www.npg.org.uk/assets/image-cache//npg-image-crops/main.20e73652.blog_anthony_comber_badu.3b281d58.webp" alt ="">
@@ -42,7 +43,7 @@
                         listening skills, and analytical mindset. he i a dedicated professional who values
                         collaboration and seeks to contribute to the growth and success of their organization.
                     </p>  
-                 </div>
+                </div>
             </div>
         </section>
 
