--- a/Bio.html
+++ b/Bio.html
@@ -14,7 +14,7 @@
         <a href="index.html" class="back-button">Back</a>
         <section class = "Bio">
             <div class = "main">
-                <img src ="https://www.npg.org.uk/assets/image-cache//npg-image-crops/main.20e73652.blog_anthony_comber_badu.3b281d58.webp" alt ="">
+                <img src ="ruben.jpeg" alt ="">
                 <div class = "Bio-text">
                     <h1>Bio</h1>
                     <p class="zero"> Ruben Houngbedji is an accomplished actuarial analyst and analytics expert known for their
